--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -5,7 +5,8 @@
     <string name="ok">確定</string>
     <string name="please_enter_a_number_1_10">請輸入1到10的數字</string>
     <string name="button_guess">猜</string>
-    <string name="counter_zero">0</string>
+    <string name="counter_zero">0 次</string>
+    <string name="counter_times"> %1$d 次</string>
     <string name="smaller">再小一點</string>
     <string name="bigger">再大一點</string>
     <string name="bingo">猜對了</string>
